# tinytroupe_project

./: .gitignore  README.md  ai.ipynb  config.ini  indian_fast_food_chain_focus_group.ipynb  pyproject.toml  requirements.txt  supply_chain.ipynb  supply_chain.py  supply_chain_requests.csv  supply_chain_sim.py  supply_chain_simulation.py  supply_chain_simulation_results.csv  test_agent_communication.py  test_agent_interactions.py  test_supply_chain_basic.py  tool_exploration.ipynb
Archive/: exploration.ipynb  gpt_ex.ipynb
agents/: __init__.py  base.py  coo.py  external_event.py  external_events.py  production_facility.py  regional_manager.py  supplier.py  transportation.py
fragments/: air_freight_carrier.fragment.json  contract_supplier.fragment.json  market_demand_fluctuation_generator.fragment.json  ocean_freight_carrier.fragment.json  raw_material_supplier.fragment.json  supply_chain_manager.fragment.json  tier_1_supplier.fragment.json
fragments/external_event/: geopolitical_disruption_generator.fragment.json  (+1 more)
models/: __init__.py  agent.py  disruption.py  enums.py  order.py  resilience_strategy.py
simulation/: __init__.py  config.py  monte_carlo.py  resilience.py  state.py  world.py
supply_chain/: tools.py
test_results/: simulation_daily_830baf46.csv  simulation_results_39ed29ee.csv  simulation_results_39ed29ee.md  simulation_results_830baf46.md
tests/: __init__.py  test_helpers.py  test_supply_chain.py  test_supply_chain_simulation.py
tinytroupe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: disruption_manager.py  tools.py
(+178 files in other folders)
